--- a/views/cadastro.html
+++ b/views/cadastro.html
@@ -6,17 +6,5 @@ Referencia: https://cursos.timtec.com.br/course/desenvolvimento-web-com-angularj
 Informacoes adicionais: 
 -->
 
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
-</head>
-<body>
-    <cadastraAluno></cadastraAluno>
-</body>
-</html>
+
+ <cadastrar-alunos></cadastrar-alunos>
